# twitsocial-backend

./: .env  .gitignore  Cargo.toml  database.db
migrations/: create_tables.sql
migrations/2023-08-17-163813_create_db/: up.sql
src/: connection.rs  handler.rs  main.rs  models.rs  routes.rs
src_old/: models.rs
